--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+#backgroundContainer {
     background-color: #ADD8E6; 
     background-image: 
     url('wolken.gif');
@@ -6,6 +6,8 @@ body {
     background-repeat: no-repeat;   
     background-position: center top; 
     background-size: cover;
+    width: 100%;
+    height: 500px;
 }
 
 body::before {
@@ -49,7 +51,7 @@ nav a {
 }
 
 /* Stil für den gemeinsamen Container von Hintergrundbild und Button */
-#backgroundContainer {
+#illu {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -59,7 +61,7 @@ nav a {
     background-attachment: fixed;
 }
 
-#backgroundContainer img {
+#illu img {
     width: 100%; /* Vollständige Breite des Containers */
     height: auto; /* Behalte das Seitenverhältnis bei */
 }
